--- a/index.html
+++ b/index.html
@@ -3,19 +3,39 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/pwa-icons/wheel.svg" />
+    <link rel="apple-touch-icon" href="/pwa-icons/wheel.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#242a32" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <link rel="manifest" href="/manifest.webmanifest" />
-    <script src="https://cdn.jsdelivr.net/pyodide/v0.23.4/full/pyodide.js"></script>
-    <title>JP_Portal - Attendance and Student Portal for Jaypee Institute of Information Technology</title>
+    <title>JP Portal - Attendance and Student Portal for Jaypee Institute of Information Technology</title>
     <meta name="google-site-verification" content="tUtKF9kdLnzHmzp_zXdEg-XXGifxAxknwLTyUuWgzuQ" />
-    <meta name="description" content="JP_Portal is a comprehensive web portal for students of Jaypee Institute of Information Technology (JIIT). Manage your attendance, view exam marks, access resources, announcements, and more." />
-    <meta name="keywords" content="JP_Portal, JIIT, Jaypee Institute of Information Technology, student portal, education, resources, attendance, exam marks, announcements, student management, JIIT portal" />
+    <meta name="description" content="JP Portal is a comprehensive web portal for students of Jaypee Institute of Information Technology (JIIT). Manage your attendance, view exam marks, access resources, announcements, and more." />
+    <meta name="keywords" content="JP Portal, JIIT, Jaypee Institute of Information Technology, student portal, education, resources, attendance, exam marks, announcements, student management, JIIT portal" />
     <meta name="author" content="Yash Malik" />
-    <meta property="og:title" content="JP_Portal - Jaypee Institute of Information Technology" />
-    <meta property="og:description" content="JP_Portal is a web portal for students of JIIT, Jaypee Institute of Information Technology. Access resources, announcements, and more." />
+    <meta property="og:title" content="JP Portal - Jaypee Institute of Information Technology" />
+    <meta property="og:description" content="JP Portal is a web portal for students of JIIT, Jaypee Institute of Information Technology. Access resources, announcements, and more." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://jportal2-0.vercel.app/" />
+    <meta property="og:image" content="https://jportal2-0.vercel.app/pwa-icons/wheel.svg" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="JP Portal - Jaypee Institute of Information Technology Student Portal" />
+    <meta name="twitter:description" content="JP Portal is an unofficial web portal for students of JIIT, Jaypee Institute of Information Technology. Access resources, announcements, and more." />
+    <meta name="twitter:image" content="https://jportal2-0.vercel.app/pwa-icons/wheel.svg" />
+    <link rel="canonical" href="https://jportal2-0.vercel.app/" />
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "JP Portal",
+      "description": "Unofficial student portal for Jaypee Institute of Information Technology (JIIT)",
+      "url": "https://jportal2-0.vercel.app/",
+      "applicationCategory": "EducationalApplication",
+      "operatingSystem": "Web Browser"
+    }
+    </script>
   </head>
   <body>
     <div id="root"></div>
