--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/pwa-icons/wheel.svg" />
-    <link rel="apple-touch-icon" href="/pwa-icons/wheel.svg" />
+    <link rel="icon" type="image/x-icon" href="/logo.ico" />
+    <link rel="apple-touch-icon" href="/logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#242a32" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -13,17 +13,18 @@
     <title>JP Portal - Attendance and Student Portal for Jaypee Institute of Information Technology</title>
     <meta name="google-site-verification" content="tUtKF9kdLnzHmzp_zXdEg-XXGifxAxknwLTyUuWgzuQ" />
     <meta name="description" content="JP Portal is a comprehensive web portal for students of Jaypee Institute of Information Technology (JIIT). Manage your attendance, view exam marks, access resources, announcements, and more." />
-    <meta name="keywords" content="JP Portal, JIIT, Jaypee Institute of Information Technology, student portal, education, resources, attendance, exam marks, announcements, student management, JIIT portal" />
-    <meta name="author" content="Yash Malik" />
+    <meta name="keywords" content="JP Portal, JIIT, Jaypee Institute of Information Technology, student portal, education, resources, attendance, exam marks, announcements, student management, JIIT portal, jportal, jpportal, jp_portal, jp portal" />
+    <meta name="author" content="JP Portal" />
     <meta property="og:title" content="JP Portal - Jaypee Institute of Information Technology" />
     <meta property="og:description" content="JP Portal is a web portal for students of JIIT, Jaypee Institute of Information Technology. Access resources, announcements, and more." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://jportal2-0.vercel.app/" />
-    <meta property="og:image" content="https://jportal2-0.vercel.app/pwa-icons/wheel.svg" />
+    <meta property="og:image" content="https://jportal2-0.vercel.app/logo.ico" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="JP Portal - Jaypee Institute of Information Technology Student Portal" />
     <meta name="twitter:description" content="JP Portal is an unofficial web portal for students of JIIT, Jaypee Institute of Information Technology. Access resources, announcements, and more." />
-    <meta name="twitter:image" content="https://jportal2-0.vercel.app/pwa-icons/wheel.svg" />
+    <meta name="twitter:image" content="https://jportal2-0.vercel.app/logo.ico" />
+    <meta name="image" content="https://jportal2-0.vercel.app/logo.ico" />
     <link rel="canonical" href="https://jportal2-0.vercel.app/" />
     <script type="application/ld+json">
     {
@@ -34,6 +35,15 @@
       "url": "https://jportal2-0.vercel.app/",
       "applicationCategory": "EducationalApplication",
       "operatingSystem": "Web Browser"
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "JP Portal",
+      "url": "https://jportal2-0.vercel.app/",
+      "logo": "https://jportal2-0.vercel.app/logo.ico"
     }
     </script>
   </head>
