--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="mobile-web-app-capable" content="yes" />
+<meta name="google-site-verification" content="D0a6v1XpmTUTVHKTDwBHBoQFJb616icSpzVs9ftS-40" />
     <link rel="manifest" href="/manifest.webmanifest" />
     <title>JP Portal - Attendance and Student Portal for Jaypee Institute of Information Technology</title>
     <meta name="google-site-verification" content="tUtKF9kdLnzHmzp_zXdEg-XXGifxAxknwLTyUuWgzuQ" />
